--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a-scene>
+        <a-entity position="0 1.5 -3" gltf-model="https://cdn.aframe.io/360-image-gallery-boilerplate/models/wooden_sculpture/scene.gltf"></a-entity>
         <a-box position="0 1.5 -3" color="red"></a-box>
         <a-sky color="lightblue"></a-sky>
     </a-scene>
